<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Address -->
    <string name="contacts_ui_address_hint">Address</string>

    <!-- Custom label input dialog -->
    <string name="contacts_ui_custom_label_input_dialog_title">Custom label name</string>

    <!-- Email -->
    <string name="contacts_ui_email_hint">Email</string>

    <!-- Event -->
    <string name="contacts_ui_event_hint">Date</string>

    <!-- Im -->
    <string name="contacts_ui_im_hint">IM</string>

    <!-- Name -->
    <string name="contacts_ui_name_prefix_hint">Name prefix</string>
    <string name="contacts_ui_name_first_hint">First name</string>
    <string name="contacts_ui_name_middle_hint">Middle name</string>
    <string name="contacts_ui_name_last_hint">Last name</string>
    <string name="contacts_ui_name_suffix_hint">Name suffix</string>
    <string name="contacts_ui_name_phonetic_first_hint">Phonetic first name</string>
    <string name="contacts_ui_name_phonetic_middle_hint">Phonetic middle name</string>
    <string name="contacts_ui_name_phonetic_last_hint">Phonetic last name</string>

    <!-- Nickname -->
    <string name="contacts_ui_nickname_hint">Nickname</string>

    <!-- Note -->
    <string name="contacts_ui_note_hint">Note</string>

    <!-- Organization -->
    <string name="contacts_ui_organization_company_hint">Company</string>
    <string name="contacts_ui_organization_title_hint">Title</string>

    <!-- Phone -->
    <string name="contacts_ui_phone_number_hint">Phone number</string>

    <!-- Photo picker -->
    <string name="contacts_ui_photo_take_error">Unable to take a photo</string>
    <string name="contacts_ui_photo_select_error">Unable to select a photo</string>

    <string name="contacts_ui_photo_picker_dialog_title">Change photo</string>

    <string-array name="contacts_ui_photo_picker_dialog_choices_1">
        <item>Take new photo</item>
        <item>Select new photo</item>
        <item>Remove photo</item>
    </string-array>

    <string-array name="contacts_ui_photo_picker_dialog_choices_2">
        <item>Take new photo</item>
        <item>Select new photo</item>
    </string-array>

    <!-- Relation -->
    <string name="contacts_ui_relation_hint">Relationship</string>

    <!-- Ringtone picker -->
    <string name="contacts_ui_ringtone_select_error">Unable to select a ringtone</string>

    <!-- Address -->
    <string name="contacts_ui_sip_address_hint">SIP</string>

    <!-- Website -->
    <string name="contacts_ui_website_hint">Website</string>

</resources>